KAN-319 <fix : spotbug p2 warning fix>